Fix chart deployment and missing ageEnabled properties
